Bug 825810 part 1: Make GetFirstNonAnonBoxDescendant() okay with receiving & returning null frame pointers. r=bz